--- a/public/style.css
+++ b/public/style.css
@@ -143,3 +143,21 @@ td {
   color: #003366;
   border-bottom: solid 1px rgba(255, 255, 255, 0.1);
 }
+
+/* Chat design */
+
+.send {
+  float: center;
+  margin: 30px;
+}
+
+.chatDiv {
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.chatSpace {
+  border-style: solid 2px black;
+  background-color: white;
+}
